# ma-git-viewer

./: .gitignore  CLAUDE.md  README.md  start.sh
backend/: Cargo.toml
backend/src/: error.rs  main.rs
backend/src/git/: cache.rs  diff.rs  history.rs  mod.rs  repository.rs  tree.rs
backend/src/models/: blame.rs  commit.rs  diff.rs  filesystem.rs  mod.rs  tree.rs
backend/src/routes/: blame.rs  branches.rs  commits.rs  diff.rs  filesystem.rs  mod.rs  repository.rs  status.rs  tree.rs
docs/: DESIGN.md  ORIGINAL_REQUIREMENTS.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  hooks.ts  types.ts
frontend/src/components/bottom-panel/: BottomPanel.tsx  ContentsTab.tsx  ContributorFilter.tsx  HistoryTab.tsx  StatusTab.tsx
frontend/src/components/branch-switcher/: BranchSwitcher.tsx
frontend/src/components/diff/: DiffModal.tsx  DiffViewer.tsx
frontend/src/components/file-list/: FileList.tsx
frontend/src/components/file-tree/: FileTree.tsx
frontend/src/components/layout/: AppLayout.tsx
frontend/src/components/repo-switcher/: RepoSwitcher.tsx
frontend/src/components/ui/: button.tsx  checkbox.tsx  dialog.tsx  popover.tsx  scroll-area.tsx  tabs.tsx
frontend/src/lib/: utils.ts
frontend/src/store/: selectionStore.ts  settingsStore.ts
frontend/src/utils/: authorFilter.ts
